--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 node_modules/
 cypress.env.json
-cypress/fixtures/credentials.json
+# cypress/fixtures/credentials.json
 cypress/screenshots/
 cypress/videos/
 temp_codegen/
