Add full E2E test suite, page objects, HTML report integration, and update documentation

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ temp_codegen/
 note/
 *.log
 # Bỏ qua file token chứa access token
-cypress/fixtures/token.json 
+cypress/fixtures/token.json
+cypress/reports/ 
