--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "cy:open": "cypress open"
   },
   "devDependencies": {
-    "cypress": "^12.17.4"
+    "cypress": "^12.17.4",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.4.1",
+    "mochawesome-report-generator": "^6.2.0"
+  },
+  "dependencies": {
+    "@executeautomation/playwright-mcp-server": "^1.0.5"
   }
-} 
+}
