--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mochawesome-report-generator": "^6.2.0"
   },
   "dependencies": {
-    "@executeautomation/playwright-mcp-server": "^1.0.5"
+    "@executeautomation/playwright-mcp-server": "^1.0.5",
+    "node-fetch": "^2.7.0"
   }
 }
