--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -5,18 +5,37 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch:
 
 jobs:
-  cypress-run:
+  test-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Checkout source code
+        user: action/checkout@v4
+        with:
+          persist-credentials: true
+
+      - name: Set up Node.js
+        user: action/checkout@v4
         with:
           node-version: 18
+
       - name: Install dependencies
         run: npm install
-      - name: Run Cypress tests
-        run: npx cypress run 
+
+      - name: Set up url
+         run: |
+          echo '{
+            "baseUrlStaging": "'"${{secrets.STAGING_BASE_URL }}"'"
+          }' > cypress.env.json
+
+      - name: Run test and merge report in dev environment
+        run: |
+          npm run test:staging
+          npm run report:merge:staging
+        env:
+          ENV: staging
+
+    
