--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -13,12 +13,12 @@ jobs:
 
     steps:
       - name: Checkout source code
-        user: action/checkout@v4
+        uses: action/checkout@v4
         with:
           persist-credentials: true
 
       - name: Set up Node.js
-        user: action/checkout@v4
+        uses: actions/setup-node@v4
         with:
           node-version: 18
 
