fix: allow workflow to continue after test failures with continue-on-error

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -37,6 +37,7 @@ jobs:
           npm run report:merge:staging
         env:
           ENV: staging
+        continue-on-error: true
 
       - name: Checkout gh-pages branch
         uses: actions/checkout@v4
