fix:syntax cypress.yml

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -36,7 +36,7 @@ jobs:
           TIMESTAMP=$(date +'%Y-%m-%d_%H-%M-%S')
           REPORT_NAME="report_${TIMESTAMP}.html"
           echo "REPORT_NAME=$REPORT_NAME" >> $GITHUB_ENV
-          npm run test:staging
+          npm run test:staging || true
           npm run report:merge:staging -- --report-filename=$REPORT_NAME
         env:
           ENV: staging
