--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^24.0.12",
     "cross-env": "^7.0.3",
     "cypress": "^14.3.3",
+    "cypress-file-upload": "^5.0.8",
     "cypress-iframe": "^1.0.1",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.4.1",
